# -World-Happiness-Report-Dashboard

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  requirements-tools.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/images/: README.md
scripts/: make_demo_gif.py  push-to-github.ps1
shiny-dashboard-redirect/: DEPLOY-SHINY.md  GUIA-DESPLEGUE.md  README.md  app.R  deploy.R
world-happiness-streamlit/: .dockerignore  .gitignore  Dockerfile  README.md  app.py  i18n.py  insights.py  pyproject.toml  requirements-dev.txt  requirements.txt  trend_helpers.py
world-happiness-streamlit/.streamlit/: config.toml
world-happiness-streamlit/data/: demo_whr.csv
world-happiness-streamlit/scripts/: generate_demo_whr.py
world-happiness-streamlit/tests/: test_insights.py  test_trend_helpers.py
